bug(pages): fixed alignments issues

--- a/style/screen.css
+++ b/style/screen.css
@@ -401,7 +401,7 @@ body {
 }
 
 .c-main-section__content {
-    height: 100%;
+    height: fit-content;
     display: flex;
     flex-wrap: nowrap;
     align-items: center;
@@ -1112,8 +1112,8 @@ body {
     }
 }
 
-.u-height-fit-content {
-    height: fit-content;
+.u-height-max {
+    height: 100%;
 }
 
 
